# app/controllers/controllers_users.go
@@ -20,7 +20,7 @@ import (
 // @Produce json
 // @Param Body body reqres.GlobalUserRequest true "Create body"
 // @Success 200
-// @Router /v1/user [post]
+// @Router /v1/users [post]
 // @Security ApiKeyAuth
 // @Security JwtToken
 func CreateUser(c echo.Context) error {
@@ -68,7 +68,7 @@ func CreateUser(c echo.Context) error {
 // @Param created_at_margin_bottom query string false "created_at_margin_top (format: 2006-01-02)"
 // @Produce json
 // @Success 200
-// @Router /v1/user [get]
+// @Router /v1/users [get]
 // @Security ApiKeyAuth
 // @Security JwtToken
 func GetUsers(c echo.Context) error {
@@ -90,7 +90,7 @@ func GetUsers(c echo.Context) error {
 // @Param id path integer true "ID"
 // @Produce json
 // @Success 200
-// @Router /v1/user/{id} [get]
+// @Router /v1/users/{id} [get]
 // @Security ApiKeyAuth
 // @Security JwtToken
 func GetUserByID(c echo.Context) error {
@@ -116,7 +116,7 @@ func GetUserByID(c echo.Context) error {
 // @Param id path integer true "ID"
 // @Param company_id query integer false "company_id (int)"
 // @Success 200
-// @Router /v1/user/{id} [delete]
+// @Router /v1/users/{id} [delete]
 // @Security ApiKeyAuth
 // @Security JwtToken
 func DeleteUserByID(c echo.Context) error {
@@ -158,7 +158,7 @@ func DeleteUserByID(c echo.Context) error {
 // @Param Body body reqres.GlobalUserRequest true "Update body"
 // @Param company_id query integer false "company_id (int)"
 // @Success 200
-// @Router /v1/user/{id} [put]
+// @Router /v1/users/{id} [put]
 // @Security ApiKeyAuth
 // @Security JwtToken
 func UpdateUserByID(c echo.Context) error {
@@ -222,8 +222,6 @@ func UpdateUserByID(c echo.Context) error {
 		data.Gender = input.Gender
 	}
 
-
-	 
 	// if input.RoleID != 0 {
 	// 	data.RoleID = input.RoleID
 	// }
